Finished the initial enhancement for category two algorithms and data structures main files of subject are PlaylistNavigationService and TrackCatalog